front-end Axios service debug, basic login page and logic

--- a/frontend-Angular/src/app/app.component.html
+++ b/frontend-Angular/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="app">
   <app-header [pageTitle]="'E-Fan-Shang'"
               [logoSrc]="'assets/images/logo.png'"/>
-  <app-auth-content/>
+  <app-content/>
 </div>
 
 
