--- a/frontend-Angular/src/app/content/content.component.html
+++ b/frontend-Angular/src/app/content/content.component.html
@@ -1,4 +1,7 @@
 <div>
     <app-welcome-content/>
-    <app-login-form (onSubmitLoginEvent)="onLogin($event)"/>
+    <app-login-form 
+    (onSubmitLoginEvent)="onLogin($event)"
+    (onSubmitRegisterEvent)="onRegister($event)"
+    />
 </div>
