--- a/frontend-Angular/src/app/content/content.component.html
+++ b/frontend-Angular/src/app/content/content.component.html
@@ -1,7 +1,11 @@
 <div>
-    <app-welcome-content/>
-    <app-login-form 
+    <app-buttons (loginEvent)="showComponent('login')" 
+                (logoutEvent)="showComponent('welcome')" />
+
+    <app-welcome-content *ngIf="componentToShow == 'welcome'"/>
+    <app-login-form  *ngIf="componentToShow == 'login'"
     (onSubmitLoginEvent)="onLogin($event)"
     (onSubmitRegisterEvent)="onRegister($event)"
     />
+    <app-auth-content *ngIf="componentToShow == 'messages'"/>
 </div>
