--- a/frontend-admin-Angular/src/app/buttons/buttons.component.html
+++ b/frontend-admin-Angular/src/app/buttons/buttons.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-md-12 text-center">
+<div class="row justify-content-end">
+    <div class="col-auto">
         <button class="btn btn-primary" style="margin: 10px;"
         (click)="loginEvent.emit()">Login</button>
         <button class="btn btn-dark" style="margin: 10px;"
